# 0-GPT2

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CHAPTERS.md  UPLOAD_TO_GITHUB.md
scripts/: ch02_data_pipeline.py  ch03_attention_demo.py  ch04_build_gpt.py  ch05_pretrain_or_load_gpt2.py  ch06_finetune_classifier.py  ch07_instruction_tuning_eval.py
src/gpt2_from_scratch/: __init__.py  attention.py  checkpointing.py  classification.py  config.py  data.py  evaluation.py  generation.py  gpt2_weights.py  instruction_tuning.py  model.py  runtime.py  training.py
tests/: conftest.py  test_attention.py  test_instruction_tuning.py  test_model.py
