[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt2-from-scratch-workflows"
version = "0.1.0"
description = "From-scratch GPT-2 implementation plus LLM fine-tuning and evaluation workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "tiktoken>=0.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
data = ["pandas>=2.0"]
pretrained = ["tensorflow>=2.15", "requests>=2.31", "tqdm>=4.66"]
plots = ["matplotlib>=3.8"]
eval = ["psutil>=5.9", "tqdm>=4.66"]
all = [
    "pandas>=2.0",
    "tensorflow>=2.15",
    "requests>=2.31",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "psutil>=5.9",
]

[tool.setuptools.packages.find]
where = ["src"]

